# IP-Claim

./: .gitignore  devenv.yaml  docker-compose.yml  flake.nix  m.py  pyproject.toml  t.py  test.py
config/: hupd_importer.yml  mongodb.yml
devenv/: devenv.nix
meetings/: 27.05.2025.md  30.06.2025.md
notebooks/: dev.ipynb
scripts/: hupd_importer.py
src/ip_claim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: hupd.py
src/scripts/: abdullah-ahmed-2503716.ipynb  hupd_importer.py  sglang-server.py
src/utils/: chunker.py  entity_extractor.py  kb_extractor.py  loader.py
test/scripts/: test_hupd_importer.py
